--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,5 @@ a.button
   border-bottom: 2px solid #979797; /* width of the border, type, color */
   transition: 0.2s opacity;
   }
+
+#my-link {/* id selector */color: black;}
