--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ a:visited { /* visited link */color: #1C88E4;}
 a:hover {color: #70BDFF;text-decoration: underline; /* Underlining when hovering over a link */}
 a:active { /* selected link */color: #146EBB;}
 
+nav > ul > li > a:visited { /* visited link */color: #000000;}
+nav > ul > li > a:hover {color: #000000;text-decoration: underline; /* Underlining when hovering over a link */}
+nav > ul > li > a:active { /* selected link */color: #000000;}
+
 a.button
   {
   display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
