--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,18 @@ a.button
   background-color: #F1F1F1;
   color: #4AA7F7; /* needed to override the default link color */
   font-weight: 400;
+  text-decoration: none;
   padding: 10px;
+  margin-top: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #979797; /* width of the border, type, color */
   transition: 0.2s opacity;
+  transition-property: opacity;
   }
-
+  .button:hover {
+    opacity: 0.8;
+  }
+  
 /* Layout styling */
 
 .container {
@@ -74,8 +80,20 @@ a.button
   text-align: center; /* Centers text */
 }
 
+#hero h2 {
+  text-align: center; /* Centers text */
+}
+
 #hero p {
   text-align: center; /* Centers text */
+}
+
+#hero {
+  text-align: center;
+}
+
+#hero span {
+  display: block;
 }
 
 #work h2 {
@@ -143,7 +161,7 @@ a.button
 }
 
 header {
-  background-color: #ffe4c4;
+  background-color: #ffffff;
   text-align: center;
   padding: 10px 0;
   box-shadow:0px 3px 10px 0px rgba(50, 50, 50, 0.5);
@@ -167,30 +185,30 @@ nav > ul > li > a {
 }
 
 #hero {
-  background-color: #ffe4c4;
+  background-color: #f0efeb;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
 }
 
-
 /* Footer Styling */
 
-#footer {
+#contact {
   text-align: center;
 }
 
-#footer h2 {
+#contact h2 {
   text-align: center; /* Centers text */
 }
 
-#footer p {
+#contact p {
   text-align: center; /* Centers text */
 }
+
 
 .social {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .social a {
@@ -201,4 +219,86 @@ nav > ul > li > a {
 
 .center {
   text-align: center;
+}
+
+.profilephoto {
+  max-width: 300px;
+  margin: 0 auto;
+  display: block;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 14px;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  [class*="col-"] {
+    float: left;
+    padding: 10px;
+  }
+  #about-page h3 {
+    margin-top: 0;
+  }
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 14px;
+  }
+  .col-md-5 {
+    width: 40%;
+  }
+  .col-md-7 {
+    width: 60%;
+  }
+  [class*="col-"] {
+    float: left;
+    padding: 10px;
+  }
+  #about-page h3 {
+    margin-top: 0;
+  }
+}
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* ==============================
+Extra-large devices (1920px or larger)
+================================= */
+@media only screen and (min-width: 1920px) {
 }
