--- a/css/style.css
+++ b/css/style.css
@@ -271,10 +271,10 @@ Large devices (1024px or larger)
     float: right;
     margin-top: 14px;
   }
-  .col-md-5 {
+  .col-lg-5 {
     width: 40%;
   }
-  .col-md-7 {
+  .col-lg-7 {
     width: 60%;
   }
   [class*="col-"] {
