--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,55 @@ nav > ul > li > a {
   display: table;
 }
 
+.skilltools h2 {
+  padding-top: 40px;
+}
+
+#story .container {
+  border-bottom: 1px solid #4a4a4a; margin: 25px; display: inline-block;
+}
+
+#modhouseproj .container {
+  border-bottom: 1px solid #4a4a4a;
+}
+
+/* ==============================
+Animation code
+================================= */
+.berlin-illustration {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
