--- a/css/style.css
+++ b/css/style.css
@@ -19,24 +19,26 @@ line-height: 1.4;
 }
 h1 {
 font-size: 2.75em;
-font-weight: 700;
+font-weight: 500;
 }
 
 h2 {
 font-size: 2.25em;
-font-weight: 700;
+font-weight: 400;
 }
 
 h3 {
 font-size: 1.75em;
-font-weight: 400;
+font-weight: 300;
+margin-top: 0;
 }
 h4 {
 font-size: 1.35em;
-font-weight: 400;
+font-weight: 200;
 }
 
 img {width: 100%;}
+
 a {color: #4AA7F7;text-decoration: none; /* No underlining */}
 a:visited { /* visited link */color: #1C88E4;}
 a:hover {color: #70BDFF;text-decoration: underline; /* Underlining when hovering over a link */}
@@ -180,7 +182,7 @@ nav > ul > li {
 nav > ul > li > a {
   padding: 0 15px;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 300;
   color: #4a4a4a;
 }
 
