--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,9 @@ a.button
 .row {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
-
+main {
+  padding-top: 56px;
+}
 #work .row { padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; }
 
 #hero h1 {
@@ -180,27 +182,54 @@ a.button
   padding-top: -10px;
 }
 
+.navtoggle li:not(:last-child) {
+  display: none;
+}
+
+.navtoggle, .navtoggle.responsive {
+  position: relative;
+  }
+
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  font-size: 20px;
+  padding-right: 0;
+  padding-top: 7px;
+}
+
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
+.navtoggle.responsive li  {
+  display: block;
+  padding: 10px 0;
+  text-align: right;
+}
+
+.navtoggle.responsive li:last-child  {
+  padding: 0 0 10px;
+}
+
 /* Header Styling */
 
 .logo {
-  max-width: 250px;
+  max-width: 150px;
 }
 
 header {
   background-color: #ffffff;
-  text-align: center;
   padding: 10px 0;
   box-shadow:0px 3px 10px 0px rgba(50, 50, 50, 0.5);
   position: relative;
+  padding: 10px 0 4px;
 }
 
 nav > ul {
   list-style-type: none;
   padding: 0;
-}
-
-nav > ul > li {
-  display: inline-block;
+  margin: 0;
 }
 
 nav > ul > li > a {
@@ -321,6 +350,18 @@ Medium devices (640px and larger)
     width: auto;
     float: right;
     margin-top: 14px;
+  }
+  nav > ul {
+  margin: 1em 0;
+  }
+  .navtoggle li:not(:last-child) {
+  display: inline-block;
+  }
+  .navtoggle li:last-child {
+  display: none;
+  }
+  .logo {
+    max-width: 250px;
   }
   .col-md-6 {
     width: 50%;
