reintroduce nav > ul > li display code

--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,10 @@ nav > ul {
   margin: 0;
 }
 
+nav > ul > li {
+  display: inline-block;
+}
+
 nav > ul > li > a {
   padding: 0 15px;
   text-transform: uppercase;
