--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ font-weight: 200;
 
 img {width: 100%;}
 
+/* ==============================
+Header code
+================================= */
 a {color: #4AA7F7;text-decoration: none; /* No underlining */}
 a:visited { /* visited link */color: #1C88E4;}
 a:hover {color: #70BDFF;text-decoration: underline; /* Underlining when hovering over a link */}
@@ -49,6 +52,34 @@ nav > ul > li > a:hover {color: #000000;text-decoration: underline; /* Underlini
 nav > ul > li > a:active { /* selected link */color: #b7b7b7;}
 
 .active a, .active a:visited {text-decoration: underline;}
+.logo {
+  max-width: 150px;
+}
+
+header {
+  background-color: #ffffff;
+  padding: 10px 0;
+  box-shadow:0px 3px 10px 0px rgba(50, 50, 50, 0.5);
+  position: relative;
+  padding: 10px 0 4px;
+}
+
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: #4a4a4a;
+}
 
 .navtoggle li:not(:last-child) {
   display: none;
@@ -116,6 +147,12 @@ main {
 /* ==============================
 Hero code
 ================================= */
+#hero {
+  background-color: #f0efeb;
+  padding: 20px 0;
+  display: inline-block;
+  width: 100%;
+}
 
 #hero h1 {
   text-align: center; /* Centers text */
@@ -180,6 +217,10 @@ About code
   padding: 0;
 }
 
+#story .container {
+  border-bottom: 1px solid #4a4a4a; margin: 25px; display: inline-block;
+}
+
 /* ==============================
 Modhouse code
 ================================= */
@@ -206,6 +247,10 @@ Modhouse code
   padding: 0;
 }
 
+#modhouseproj .container {
+  border-bottom: 1px solid #4a4a4a;margin: 25px; display: inline-block;
+}
+
 /* ==============================
 Nestegg code
 ================================= */
@@ -228,47 +273,14 @@ Nestegg code
   padding: 0;
 }
 
-
-/* Header Styling */
-
-.logo {
-  max-width: 150px;
+#nesteggproj .container {
+  border-bottom: 1px solid #4a4a4a;margin: 25px; display: inline-block;
 }
 
-header {
-  background-color: #ffffff;
-  padding: 10px 0;
-  box-shadow:0px 3px 10px 0px rgba(50, 50, 50, 0.5);
-  position: relative;
-  padding: 10px 0 4px;
-}
 
-nav > ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-nav > ul > li {
-  display: inline-block;
-}
-
-nav > ul > li > a {
-  padding: 0 15px;
-  text-transform: uppercase;
-  font-weight: 300;
-  color: #4a4a4a;
-}
-
-#hero {
-  background-color: #f0efeb;
-  padding: 20px 0;
-  display: inline-block;
-  width: 100%;
-}
-
-/* Footer Styling */
-
+/* ==============================
+Footer code
+================================= */
 #contact {
   text-align: center;
 }
@@ -280,7 +292,6 @@ nav > ul > li > a {
 #contact p {
   text-align: center; /* Centers text */
 }
-
 
 .social {
   text-align: center;
@@ -307,18 +318,6 @@ nav > ul > li > a {
   content: "";
   clear: both;
   display: table;
-}
-
-#story .container {
-  border-bottom: 1px solid #4a4a4a; margin: 25px; display: inline-block;
-}
-
-#modhouseproj .container {
-  border-bottom: 1px solid #4a4a4a;margin: 25px; display: inline-block;
-}
-
-#nesteggproj .container {
-  border-bottom: 1px solid #4a4a4a;margin: 25px; display: inline-block;
 }
 
 /* ==============================
