--- a/css/style.css
+++ b/css/style.css
@@ -163,11 +163,9 @@ nav>ul>li>a {
 }
 
 a.button {
-  display: inline-block;
-  /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
+  display: inline-block;/* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
   background-color: #ffffff;
-  color: #4a4a4a;
-  /* needed to override the default link color */
+  color: #4a4a4a;/* needed to override the default link color */
   font-weight: 400;
   text-decoration: none;
   padding: 10px;
@@ -192,8 +190,7 @@ main {
 }
 
 .row {
-  margin: 25px 0;
-  /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;/* 25px top and bottom, 0 left and right */
 }
 
 #work .row {
