Add social a.button to align (inline) footer buttons
CSS style update

--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,11 @@ Footer code
   margin: 0 10px;
 }
 
+.social a.button {
+  width: 110px;
+  transform: translate(0, -19px);
+}
+
 .center {
   text-align: center;
 }
